# agent-studio

./: .coverage  .coveragerc  .coveragerc_test  .dockerignore  .env.example  .env.template  .gitignore  .gitkeep  .gitmessage  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ANCHORED_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  PRODUCT.md  PROJECT_EVALUATION.md  QUICKSTART.md  README.md  RUNBOOK.md  SECURITY.md  TASKS.md  TEST_CASES.md  alembic.ini  checkpoints.db-shm  checkpoints.db-wal  conftest.py  coverage.json  devagents.tsx  docker-compose.yml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements-test.txt  requirements.txt  skills-lock.json  (+4 more)
.claude/: settings.local.json
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  settings.yml
.husky/: pre-commit
.impeccable/: design.json
.playwright-mcp/: page-2026-07-02T06-18-20-432Z.yml  page-2026-07-02T06-20-20-125Z.yml
alembic/: env.py
backend/: __init__.py  main.py
config/: nginx.conf
docker/: Dockerfile  compose.local.yml  compose.prod.yml  compose.redis-ha.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  FIX-LOG.md  KNOWN_ISSUES.md  coverage-improvement-plan.md  coverage-phase2.md  coverage-plan.md  database-erd.md  deploy-aliyun.md  fix-log-2026-06-26-thinking-stream.md  glossary.md  module-map.md  onboarding.md  requirement-markers-implementation.md  requirements-dev.txt  requirements-lock.txt  requirements-test.txt  workflow.puml
frontend/: .env.example  .prettierignore  Dockerfile  _replace_wsta.py  antd-snapshot.txt  eslint.config.js  index.html  lighthouse-report.json  nginx.conf  package-lock.json  package.json  playwright.config.ts  test-picker.cjs  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
helm/: Chart.yaml  values.yaml
monitoring/: dashboard.json  prometheus-alerts.yml
scripts/: check-ci-docs.py  check-docs-sync.py  check-docs.js  ci-debug.sh  deploy.sh  dev.sh  docker-entrypoint.sh  entrypoint.sh  generate-docs.js  pre-push-check.sh  preflight.py  requirement_coverage.py  run_mutmut.sh  setup-runner.sh  sync-docs.sh  test_e2e_frontend.py  test_tools_in_ai_response.py  test_tools_verified.py
skills-catalog/: README.md
templates/: index.html
tests/: REQUIREMENTS.md  TEST_CASES.md  conftest.py  conftest_flaky.py  factories.py  functional_test_cases.md  requirement_coverage.py  test_agent_crud.py  test_agent_graph.py  test_agent_state.py  test_agents.py  test_auth.py  test_auth_roles.py  test_config.py  test_continue_generation.py  test_conversation.py  test_integration.py  test_main.py  test_models.py  test_prompts.py  test_requirement_markers.py  test_security_headers_middleware.py  test_streaming.py  test_tasks.py  test_user_flow.py
virtual_team/: _interfaces.py  agent_defaults.py  agent_graph.py  agents.py  (+63 more)
(+1915 files in other folders)
